# tesseract_planning

./: CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  CMakeLists_endpoint_test.txt  COMPARISON_SUMMARY.md  ISSUE_118_ANALYSIS.md  ISSUE_164_ANALYSIS.md  ISSUE_27_ANALYSIS.md  MISSING_IMPROVEMENTS_ANALYSIS.md  REVIEW_UPDATE_2026-05.md  RUCKIG_COMPARISON.md  TESSERACT_ENDPOINT_BEHAVIOR_ANALYSIS.md  TOTG_COMPARISON.md  TOTG_SIDE_BY_SIDE_COMPARISON.md  TRAJOPT_COMPARISON.md  dependencies.repos  endpoint_velocity_test.cpp  moveit2_totg_header.hpp  moveit2_totg_key_sections.cpp  package.xml
.github/workflows/: api_docs.yml  clang_format.yml  cmake_format.yml  code_quality.yml  conda.yml  docker.yml  mac.yml  nightly.yml  package_debian.yml  ubuntu.yml  unstable.yml  windows.yml  windows_dependencies.repos
command_language/: CMakeLists.txt  POLY_TYPE_DESIGN.md
command_language/src/: cartesian_waypoint.cpp  cereal_serialization.cpp  joint_waypoint.cpp  state_waypoint.cpp  utils.cpp
command_language/test/: command_language_test_program.hpp  command_language_unit.cpp  command_language_utils_unit.cpp  type_erasure_benchmark.cpp
examples/src/: basic_cartesian_example.cpp  car_seat_example.cpp  freespace_hybrid_example.cpp  freespace_ompl_example.cpp  glass_upright_example.cpp  glass_upright_ompl_example.cpp  online_planning_example.cpp  pick_and_place_example.cpp  puzzle_piece_auxillary_axes_example.cpp  puzzle_piece_example.cpp  scene_graph_example.cpp
examples/test/: CMakeLists.txt
motion_planners/core/: CMakeLists.txt
motion_planners/descartes/: CMakeLists.txt
(+190 files in other folders)
