<?xml version="1.0"?>
<package format="3">
  <name>tesseract_planning</name>
  <version>0.35.0</version>
  <description>Tesseract motion planning framework</description>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>libtaskflow-cpp-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <!-- Core dependencies -->
  <build_depend>libconsole-bridge-dev</build_depend>
  <exec_depend>libconsole-bridge</exec_depend>
  <depend>tesseract</depend>
  <build_depend>cereal</build_depend>
  <build_export_depend>cereal</build_export_depend>
  <depend>yaml-cpp</depend>
  <depend>boost_plugin_loader</depend>

  <!-- Motion planners -->
  <depend>descartes_light</depend>
  <depend>ompl</depend>
  <depend>trajopt</depend>
  <depend>trajopt_ifopt</depend>
  <depend>trajopt_sco</depend>
  <depend>trajopt_sqp</depend>

  <!-- Time parameterization -->
  <depend>ruckig</depend>

  <!-- Test dependencies -->
  <test_depend>gtest</test_depend>
  <test_depend>gperftools</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
